--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/CSS/styles.css">
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <img src="/img/Zoro.jpg" alt="Roronoa Zoro">
+    <div class="center">
+        <img src="/img/Zoro.jpg" alt="Roronoa Zoro" id="profile-img">
         <h1>Hi! I am Gerico</h1>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. A laboriosam vero cupiditate velit repellendus expedita libero necessitatibus perferendis, neque incidunt?</p>
-        <img src="/img/Facebook.png" alt="Facebook Logo">
-        <a href="https://www.facebook.com/gericoyutuc/">https://www.facebook.com/gericoyutuc/</a>
+        
+        <a href="https://www.facebook.com/gericoyutuc/"  id="link"><img src="/img/Facebook.png" alt="Facebook Logo" id="media-img">https://www.facebook.com/gericoyutuc/</a>
     </div>
 </body>
 </html>
